<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/rubik_400"
        android:text="@string/description_profile_info"
        android:textColor="@color/gray_56"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:id="@+id/edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/bottom_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/rubik_400"
                android:text="@string/name"
                android:textColor="@color/gray_56"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/otp_layout"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otp_text">

                <EditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:height="40dp"
                    android:background="@drawable/button_border"
                    android:cursorVisible="true"
                    android:fontFamily="@font/rubik_400"
                    android:hint="@string/enter_your_name"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_15"
                    android:textColor="@color/black_20"
                    android:textColorHint="@color/light_gray"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/surname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_400"
                android:text="@string/surname"
                android:textColor="@color/gray_56"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/otp_layout"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <LinearLayout
                android:id="@+id/surname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otp_text">

                <EditText
                    android:id="@+id/surname_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:height="40dp"
                    android:background="@drawable/button_border"
                    android:cursorVisible="true"
                    android:fontFamily="@font/rubik_400"
                    android:hint="@string/enter_your_surname"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_15"
                    android:textColor="@color/black_20"
                    android:textColorHint="@color/light_gray"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otp_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/birth_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/rubik_400"
                android:text="@string/birthdate"
                android:textColor="@color/gray_56"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/otp_layout"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/birth_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otp_text">

                <EditText
                    android:id="@+id/birth_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:height="40dp"
                    android:background="@drawable/button_border"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/rubik_400"
                    android:hint="@string/enter_your_birthdate"
                    android:inputType="date"
                    android:padding="@dimen/dp_10"
                    android:paddingStart="@dimen/dp_15"
                    android:textColor="@color/black_20"
                    android:textColorHint="@color/light_gray"
                    android:textCursorDrawable="@drawable/edit_text_cursor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_date_picker"
                    app:layout_constraintBottom_toBottomOf="@+id/birth_date_input"
                    app:layout_constraintEnd_toEndOf="@+id/birth_date_input"
                    app:layout_constraintTop_toTopOf="@+id/birth_date_input" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <ai.amani.sdk.presentation.common.CustomButton
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:fontFamily="@font/rubik_500"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        tools:background="@drawable/button_border_purple"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/bottom_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/purple_amani_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>