<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29">

        <TextView
            android:id="@+id/reset_password_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/rubik_300"
            android:text="@string/verify_email_desc"
            android:textColor="@color/black_20"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="29dp"
            android:textColor="@color/gray_56"
            android:fontFamily="@font/rubik_400"
            android:text="@string/email_address"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/otp_layout"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_desc" />

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_text">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:height="40dp"
                android:fontFamily="@font/rubik_400"
                android:background="@drawable/button_border"
                android:hint="@string/enter_your_email_address_here"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_10"
                android:textColor="@color/black_20"
                android:textColorHint="@color/light_gray"
                android:textSize="@dimen/sp_14"
                android:paddingStart="@dimen/dp_15"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/edit_text_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otp_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/alert_text_otp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/rubik_500"
            android:textSize="12sp"
            android:textColor="@color/error_red"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/otp_layout"
            app:layout_constraintTop_toBottomOf="@+id/otp_layout"
            tools:text="Alert message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_logo"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_layout"
        app:layout_constraintVertical_bias="0.497"
        tools:layout_editor_absoluteX="0dp">

        <ai.amani.sdk.presentation.common.CustomButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:background="@drawable/button_border_purple"
            android:fontFamily="@font/rubik_500"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_logo"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_layout"
            tools:layout_editor_absoluteX="16dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/bottom_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="false"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/purple_amani_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>